<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Text Render</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_image">Save Image</string>
    <string name="text_hint">text to render (50 chars max)</string>
    <string name="text_default">hello</string>
    <string name="options">options</string>
    <string name="render">Render</string>
    <string name="abort">Abort</string>
    <string name="change_font">Change Font</string>
    <string name="font_arial">Arial</string>
    <string name="font_calibri">Calibri</string>
    <string name="font_footlight">Footlight</string>
    <string name="font_french">French Script</string>
    <string name="font_harlow">Harlow Solid</string>
    <string name="font_informal">Informal Roman</string>
    <string name="font_kunstler">Kunstler Script</string>
    <string name="font_magneto">Magneto</string>
    <string name="font_modern">Modern</string>
    <string name="font_oldenglish">Old English</string>
    <string name="font_pristina">Pristina</string>
    <string name="font_ravie">Ravie</string>
    <string name="font_stencil">Stencil</string>
    <string name="font_times">Times New Roman</string>
    <string name="font_trebuchet">Trebuchet MS</string>
    <string name="font_vivaldi">Vivaldi</string>
    <string name="change_material">Change Material</string>
    <string name="material_brick">Brick</string>
    <string name="material_fancy1">Fancy 1</string>
    <string name="material_fancy2">Fancy 2</string>
    <string name="material_marble1">Marble 1</string>
    <string name="material_marble2">Marble 2</string>
    <string name="material_metal">Metal</string>
    <string name="material_wood">Wood</string>
    <string name="change_backdrop">Change Backdrop</string>
    <string name="backdrop_none">None</string>
    <string name="backdrop_brick">Brick</string>
    <string name="backdrop_gold">Gold</string>
    <string name="backdrop_marble">Marble</string>
    <string name="backdrop_wood">Wood</string>
    <string name="backdrop_frame">Picture Frame</string>
    <string name="change_lighting">Change Lighting</string>
    <string name="lighting_none">None</string>
    <string name="lighting_single">Single</string>
    <string name="lighting_many">Many</string>
    <string name="change_orientation">Change Orientation</string>
    <string name="orientation_straight">Straight</string>
    <string name="orientation_straight_up">Straight Up</string>
    <string name="orientation_straight_down">Straight Down</string>
    <string name="orientation_lookup">Look Up</string>
    <string name="orientation_lookup_above">Look Up Above</string>
    <string name="orientation_lookup_below">Look Down Below</string>
    <string name="orientation_angled">Angled</string>
    <string name="change_resolution">Change Resolution</string>
    <string name="resolution_small">Small</string>
    <string name="resolution_medium">Medium</string>
    <string name="resolution_large">Large</string>
    <string name="resolution_hd">HD</string>
    <string name="resolution_fhd">FHD</string>
    <string name="resolution_4k">4K</string>
    <string name="title_activity_render">Render</string>
    <string name="image_desc">rendered image</string>
    <string name="setting_supersample">Super Sampling</string>
    <string name="setting_shadows">Shadows</string>
    <string name="setting_softshadows">Soft Shadows</string>
    <string name="setting_autoreflect">Auto Reflect</string>
    <string name="setting_multicore">Multi-core</string>
    <string name="default_text">hello</string>
    <string name="preview_image">Preview Image</string>
    <string name="font_prefix">Font:</string>
    <string name="material_prefix">Material:</string>
    <string name="backdrop_prefix">Backdrop:</string>
    <string name="lighting_prefix">Lighting:</string>
    <string name="camera_prefix">Camera:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_background">Background</string>
    <string name="choose">Choose Image</string>
    <string name="stretch">Stretch</string>
    <string name="scale_to_fit">Scale to fit</string>
    <string name="scale_to_fill">Scale to fill</string>
    <string name="number_of_colors">Count: </string>
    <string name="render_size">Render Size</string>
    <string name="render_size_small">Small\n[640x480]</string>
    <string name="render_size_medium">Medium\n[1280x960]</string>
    <string name="render_size_large">Large\n[2560x1920]</string>
    <string name="colors">Colors</string>
    <string name="image">Image</string>
    <string name="transparent">Transparent</string>
    <string name="plastic">Plastic</string>
    <string name="shiny_plastic">Shiny Plastic</string>
    <string name="glass">Glass</string>
    <string name="bd_plastic">Plastic</string>
    <string name="bd_shiny_plastic">Shiny Plastic</string>
    <string name="test">Test</string>
    <string name="service_description">Service that renders final images for Text Render</string>
    <string name="notify_channel_name">Text Render Notifications</string>
    <string name="notify_channel_desc">Text Render notifications</string>
    <string name="render_in_progress">Your render is in progress</string>
    <string name="render_notify_content">Click here to see your image</string>
    <string name="render_complete">Your render is complete</string>
    <string name="notify_ticker_in_progress">Rendering</string>
    <string name="notify_ticker_complete">Render done</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>

    <string-array name="number_of_colors">
        <item>Solid</item>
        <item>Three</item>
    </string-array>
</resources>
