<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.jordan.textrender.activity.MainActivity$PlaceholderFragment" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@color/white"
                app:boxStrokeColor="@color/color_accent"
                app:hintTextColor="@color/color_accent"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox" >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint"
                    android:alpha="0.75"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:text="@string/default_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/MainButtons"
                android:id="@+id/fontBtn"
                android:layout_below="@id/tilEditText"
                android:layout_centerHorizontal="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/font_times"
                android:onClick="onChangeFont" />
            <Button
                style="@style/MainButtons"
                android:id="@+id/matBtn"
                android:layout_below="@id/fontBtn"
                android:layout_centerHorizontal="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/material_wood"
                android:onClick="onChangeMaterial" />

            <Button
                style="@style/MainButtons"
                android:id="@+id/backDropBtn"
                android:layout_below="@id/matBtn"
                android:layout_centerHorizontal="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/backdrop_marble"
                android:onClick="onChangeBackdrop" />
            <Button
                style="@style/MainButtons"
                android:id="@+id/lightingBtn"
                android:layout_below="@id/backDropBtn"
                android:layout_centerHorizontal="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/lighting_many"
                android:onClick="onChangeLighting" />
            <Button
                style="@style/MainButtons"
                android:id="@+id/orientBtn"
                android:layout_below="@id/lightingBtn"
                android:layout_centerHorizontal="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/orientation_lookup"
                android:onClick="onChangeOrientation" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
