<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fontControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal" >
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/boldCheck"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBold"
            android:text="@string/bold" />
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/italicCheck"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onItalic"
            android:text="@string/italic" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal" >
        <Button
            style="@style/MainButtons"
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/ok" />
        <Button
            style="@style/MainButtons"
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
